syntax = "proto3";

import "hyperchain/core/types/transaction.proto";

package protos;

// This message type is used between consensus and outside
message Message {
    enum Type {
        TRANSACTION = 0;
        CONSENSUS = 1;
        STATE_UPDATED = 2;
        NULL_REQUEST = 3;
        NEGOTIATE_VIEW = 4;
    }
    Type type = 1;
    int64 timestamp = 2;
    bytes payload = 3;
    uint64 id = 4;
}

message UpdateStateMessage {
    uint64 id = 1;
    uint64 seqNo = 2;
    bytes targetId = 3;
    repeated uint64 replicas = 4;
}

message StateUpdatedMessage {
    uint64 seqNo = 1;
}

message RemoveCache {
    uint64 vid = 1;
}

message VcResetDone {
    uint64 seqNo = 1;
}

// BlockchainInfo
message BlockchainInfo {
    uint64 height = 1;
    bytes currentBlockHash = 2;
    bytes previousBlockHash = 3;
}

message NullRequestMessage {
    uint64 seqNo = 1;
}

message ValidatedTxs {
    repeated types.Transaction transactions = 1;
    string hash = 2;
    uint64 seqNo = 3;
    uint64 view = 4;
    int64 timestamp = 5;
}

message NewNodeMessage {
    bytes payload = 1;
}

message AddNodeMessage {
    bytes payload = 1;
}

message DelNodeMessage {
    bytes delPayload = 1;
    string routerHash = 2;
    uint64 id = 3;
    uint64 del = 4;
}

message RoutersMessage {
    bytes routers = 1;
}